refactor: Atualizado o link para acesso a documentação.

--- a/frontend/updateVehicle.html
+++ b/frontend/updateVehicle.html
@@ -18,7 +18,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./documentation.html">Documentação</a></li>
+                <li><a href="https://github.com/NanneSantin/projeto-de-locadora-rentcars#readme"
+                        target="_blank">Documentação</a></li>
                 <li><a href="./index.html">Cadastro de Veículos</a></li>
             </ul>
         </nav>
