--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./documentation.html">Documentação</a></li>
+                <li><a href="https://github.com/NanneSantin/projeto-de-locadora-rentcars#readme"
+                        target="_blank">Documentação</a></li>
                 <li><a href="#cadastro">Cadastro de Veículos</a></li>
                 <li><a href="#listar">Lista dos Veículos</a></li>
                 <li><a href="./updateVehicle.html" target="_blank">Atualizar Dados</a></li>
